--- a/Caddyfile
+++ b/Caddyfile
@@ -69,6 +69,10 @@
 	reverse_proxy 1pageresearch:5000
 }
 
+:8016 {
+	reverse_proxy thezurichdatinggame:3000
+}
+
 :80 {
-	respond "216labs — ramblingradio(:8001) stroll(:8002) onefit(:8003) paperframe(:8004) hivefind(:8005) pipesecure(:8006) admin(:8007) agimemes(:8008) agitshirts(:8009) priors(:8010) calibratedai(:8011) bigleroys(:8012) anchor(:8013) 1pageresearch(:8014) artisinaleurope(:8015)" 200
+	respond "216labs — ramblingradio(:8001) stroll(:8002) onefit(:8003) paperframe(:8004) hivefind(:8005) pipesecure(:8006) admin(:8007) agimemes(:8008) agitshirts(:8009) priors(:8010) calibratedai(:8011) bigleroys(:8012) anchor(:8013) 1pageresearch(:8014) artisinaleurope(:8015) thezurichdatinggame(:8016)" 200
 }
