--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - "8013:8013"
       - "8014:8014"
       - "8015:8015"
+      - "8016:8016"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
@@ -170,9 +171,11 @@ services:
       - NODE_ENV=production
       - DATABASE_PATH=/app/216labs.db
       - PROJECTS_ROOT=/workspace
+      - NEXT_PUBLIC_APP_HOST=${APP_HOST:-46.101.88.197}
     volumes:
       - ./216labs.db:/app/216labs.db
       - ./:/workspace:ro
+      - /var/run/docker.sock:/var/run/docker.sock
     expose:
       - "3000"
     mem_limit: 128m
@@ -287,6 +290,24 @@ services:
     expose:
       - "5000"
     mem_limit: 128m
+
+  # ── The Zurich Dating Game ───────────────────────────────────
+  thezurichdatinggame:
+    image: 216labs/thezurichdatinggame:latest
+    build: ./thezurichdatinggame
+    restart: unless-stopped
+    environment:
+      - PORT=3000
+      - NODE_ENV=production
+      - ZDGAME_DB_PATH=/app/data/zdgame.db
+      - ZDGAME_ADMIN_KEY=${ZDGAME_ADMIN_KEY:-change-me}
+      - ZDGAME_OPENROUTER_API_KEY=${ZDGAME_OPENROUTER_API_KEY:-}
+      - ZDGAME_MODEL=${ZDGAME_MODEL:-google/gemini-2.0-flash-001}
+    volumes:
+      - ./thezurichdatinggame/data:/app/data
+    expose:
+      - "3000"
+    mem_limit: 256m
 
   # ── Redis (used by PipeSecure) ──────────────────────────────
   redis:
