Switch from port-based to subdomain routing on *.agimemes.com
- Caddyfile: replace :8001-8018 port blocks with {id}.agimemes.com subdomain blocks; Caddy auto-provisions TLS
- docker-compose.yml: drop individual port mappings, keep only 80/443; update default OAuth/URL env vars to use new domains
- .env.example: update PIPESECURE, PRIORS, BIGLEROYS URLs; replace DOMAIN with APP_HOST=agimemes.com
- Admin UI: AppCard generates https://{id}.agimemes.com links; ArchitectureDiagram/InfraOverview updated
- audioaicheckup Dockerfile: remove COPY of non-existent /app/public

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 # 216labs — single VPS deployment config
 
-# Domain for Caddy (e.g. 216labs.com)
+# Base domain — each app is served at {id}.agimemes.com
 # Caddy auto-provisions HTTPS via Let's Encrypt for each subdomain.
-# Use "localhost" for local development (HTTP only, no certs).
-DOMAIN=localhost
+APP_HOST=agimemes.com
 
 # PostgreSQL (used by RamblingRadio)
 POSTGRES_USER=labs
@@ -17,14 +16,14 @@ PAPERFRAME_API_URL=
 
 # ── PipeSecure ─────────────────────────────────────────────────
 PIPESECURE_DATABASE_URL=postgresql://labs:changeme@postgres:5432/pipesecure
-PIPESECURE_NEXTAUTH_URL=http://localhost:8006
+PIPESECURE_NEXTAUTH_URL=https://pipesecure.agimemes.com
 PIPESECURE_NEXTAUTH_SECRET=generate-a-random-secret-here
 PIPESECURE_GITHUB_CLIENT_ID=
 PIPESECURE_GITHUB_CLIENT_SECRET=
 PIPESECURE_GITHUB_APP_ID=
 PIPESECURE_GITHUB_WEBHOOK_SECRET=
 PIPESECURE_ENCRYPTION_KEY=generate-64-char-hex-string-here
-PIPESECURE_NEXT_PUBLIC_APP_URL=http://localhost:8006
+PIPESECURE_NEXT_PUBLIC_APP_URL=https://pipesecure.agimemes.com
 
 # ── AgitShirts ──────────────────────────────────────────────────
 AGITSHIRTS_OPENAI_API_KEY=
@@ -33,9 +32,22 @@ AGITSHIRTS_CHECKOUT_BASE_URL=
 
 # ── Priors ─────────────────────────────────────────────────────
 PRIORS_SECRET_KEY=change-me
-PRIORS_OAUTH_REDIRECT_URI=http://localhost:8010/callback
+PRIORS_OAUTH_REDIRECT_URI=https://priors.agimemes.com/callback
 PRIORS_GOOGLE_CLIENT_ID=
 PRIORS_GEMINI_API_KEY=
+
+# ── OneRoom ─────────────────────────────────────────────────────
+# LLM provider for vision analysis: "openai" (default) or "gemini"
+# Switch both apps to Gemini by setting provider + Gemini key below.
+# Users can also pass their own key via the UI (uses same provider).
+ONEROOM_LLM_PROVIDER=openai
+ONEROOM_OPENAI_API_KEY=
+ONEROOM_GEMINI_API_KEY=
+
+# ── OneFit ───────────────────────────────────────────────────────
+ONEFIT_LLM_PROVIDER=openai
+ONEFIT_OPENAI_API_KEY=
+ONEFIT_GEMINI_API_KEY=
 
 # ── CalibratedAI ───────────────────────────────────────────────
 # OpenRouter API key — https://openrouter.ai/keys
@@ -43,7 +55,7 @@ CALIBRATEDAI_OPENROUTER_API_KEY=
 
 # ── Big Leroy's PL Guessing Bonanza ────────────────────────────
 BIGLEROYS_SECRET_KEY=change-me
-BIGLEROYS_OAUTH_REDIRECT_URI=http://46.101.88.197:8012/callback
+BIGLEROYS_OAUTH_REDIRECT_URI=https://bigleroys.agimemes.com/callback
 BIGLEROYS_GOOGLE_CLIENT_ID=
 
 # ── Anchor ─────────────────────────────────────────────────────
@@ -57,6 +69,20 @@ ANCHOR_RADIUS_METERS=5000
 ONEPAGE_OPENROUTER_API_KEY=
 # LLM model to use (default: google/gemini-flash-1.5)
 ONEPAGE_MODEL=google/gemini-flash-1.5
+
+# ── The Zurich Dating Game ──────────────────────────────────────
+# Secret key to access admin endpoints (POST /api/admin/match)
+ZDGAME_ADMIN_KEY=change-me
+# OpenRouter API key for AI matchmaking
+ZDGAME_OPENROUTER_API_KEY=
+# LLM model for matchmaking (default: google/gemini-2.0-flash-001)
+ZDGAME_MODEL=google/gemini-2.0-flash-001
+
+# ── Audio AI Checkup ───────────────────────────────────────────
+# OpenAI API key for gpt-4o-audio-preview
+AUDIOAICHECKUP_OPENAI_API_KEY=
+# Google Gemini API key for gemini-2.0-flash and gemini-1.5-pro
+AUDIOAICHECKUP_GEMINI_API_KEY=
 
 # Deploy script target (optional)
 # DEPLOY_HOST=root@your-droplet-ip
