--- a/Caddyfile
+++ b/Caddyfile
@@ -1,62 +1,57 @@
-# 216labs — Caddy reverse proxy (port-based routing)
+# 216labs — Caddy reverse proxy (subdomain-based routing)
 #
-# Each app gets its own port so assets resolve correctly.
-# When you have a domain, switch to subdomain-based routing
-# and set DOMAIN in .env for auto HTTPS.
+# Each app is served at {id}.agimemes.com — Caddy auto-provisions
+# HTTPS certificates via Let's Encrypt.
 
-:8001 {
+ramblingradio.agimemes.com {
 	reverse_proxy ramblingradio:5000
 }
 
-:8002 {
+stroll.agimemes.com {
 	reverse_proxy stroll:5000
 }
 
-:8003 {
+onefit.agimemes.com {
 	reverse_proxy onefit:3000
 }
 
-:8004 {
+paperframe.agimemes.com {
 	reverse_proxy paperframe-frontend:3000
 }
 
-:8005 {
+hivefind.agimemes.com {
 	reverse_proxy hivefind:3000
 }
 
-:8006 {
+pipesecure.agimemes.com {
 	reverse_proxy pipesecure:3000
 }
 
-:8007 {
+admin.agimemes.com {
 	reverse_proxy admin:3000
 }
 
-:8008 {
+agimemes.agimemes.com {
 	reverse_proxy agimemes:5000
 }
 
-:8009 {
+agitshirts.agimemes.com {
 	reverse_proxy agitshirts:5000
 }
 
-:8010 {
+priors.agimemes.com {
 	reverse_proxy priors:5000
 }
 
-:8011 {
+calibratedai.agimemes.com {
 	reverse_proxy calibratedai:3000
 }
 
-:8012 {
+bigleroys.agimemes.com {
 	reverse_proxy bigleroys:5000
 }
 
-:8015 {
-	reverse_proxy artisinaleurope:3000
-}
-
-:8013 {
+anchor.agimemes.com {
 	handle /api/* {
 		reverse_proxy anchor-api:8000
 	}
@@ -65,18 +60,22 @@
 	}
 }
 
-:8014 {
+1pageresearch.agimemes.com {
 	reverse_proxy 1pageresearch:5000
 }
 
-:8016 {
+artisinaleurope.agimemes.com {
+	reverse_proxy artisinaleurope:3000
+}
+
+thezurichdatinggame.agimemes.com {
 	reverse_proxy thezurichdatinggame:3000
 }
 
-:8017 {
+oneroom.agimemes.com {
 	reverse_proxy oneroom:3000
 }
 
-:80 {
-	respond "216labs — ramblingradio(:8001) stroll(:8002) onefit(:8003) paperframe(:8004) hivefind(:8005) pipesecure(:8006) admin(:8007) agimemes(:8008) agitshirts(:8009) priors(:8010) calibratedai(:8011) bigleroys(:8012) anchor(:8013) 1pageresearch(:8014) artisinaleurope(:8015) thezurichdatinggame(:8016) oneroom(:8017)" 200
+audioaicheckup.agimemes.com {
+	reverse_proxy audioaicheckup:3000
 }
