Lock down admin.agimemes.com with Caddy basicauth
Credentials are bcrypt-hashed and stored only in the droplet's .env —
never committed to git. ADMIN_USER and ADMIN_PASSWORD_HASH are injected
into the Caddy container via docker-compose environment.

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@
 # Caddy auto-provisions HTTPS via Let's Encrypt for each subdomain.
 APP_HOST=agimemes.com
 
+# Admin dashboard basic auth (admin.agimemes.com)
+# Generate a hash: docker run --rm caddy:2-alpine caddy hash-password --plaintext 'yourpassword'
+ADMIN_USER=admin
+ADMIN_PASSWORD_HASH=
+
 # PostgreSQL (used by RamblingRadio)
 POSTGRES_USER=labs
 POSTGRES_PASSWORD=changeme
