Add StoryMagic app and register audioaicheckup; update admin backfills
- New storybook/ app: AI children's storybook generator with DALL-E 3
  illustrations and Stripe print-on-demand checkout
- Add audioaicheckup/ app files (previously untracked)
- Update deploy.sh: add storybook service mapping
- Update 216labs_admin db.ts: backfillStorybook(), backfillAudioAiCheckup(),
  new env vars for both apps, port 8019 for storybook in KNOWN_PORTS
- Update admin package, actions, components, and docker lib
- Update onefit and oneroom openai lib

Made-with: Cursor

--- a/oneroom/package.json
+++ b/oneroom/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
     "framer-motion": "^11.5.0",
