--- a/216labs_admin/package.json
+++ b/216labs_admin/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^12.6.2",
+    "dockerode": "^4.0.4",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/dockerode": "^3.3.38",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
