--- a/audioaicheckup/package.json
+++ b/audioaicheckup/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "onefit",
+  "name": "audioaicheckup",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3002",
+    "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
-    "framer-motion": "^11.5.0",
-    "jose": "^6.1.3",
-    "lucide-react": "^0.575.0",
+    "lucide-react": "^0.475.0",
     "next": "^14.2.0",
     "openai": "^4.60.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "react-dropzone": "^14.2.0"
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.0",
