Add order management infra: success page, admin orders, email
Storybook:
- /success page showing order confirmation + shipping details
- GET/PATCH /api/admin/orders (bearer token protected)
- Email notification via Resend when webhook fires on paid order
- getAllOrders() + setOrderStatus() added to db.ts

Admin dashboard:
- Orders section shows all storybook orders with status + customer info
- Mark Fulfilled button calls storybook's internal API
- EnvVarEditor now groups StoryMagic, AudioAICheckup, RamblingRadio, Paperframe
- New env vars: STORYBOOK_ADMIN_TOKEN, STORYBOOK_RESEND_API_KEY,
  STORYBOOK_ADMIN_EMAIL, STORYBOOK_FROM_EMAIL, STORYBOOK_INTERNAL_URL

docker-compose.yml:
- New env vars wired into storybook and admin services

Made-with: Cursor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -178,6 +178,8 @@ services:
       - DATABASE_PATH=/app/216labs.db
       - PROJECTS_ROOT=/workspace
       - NEXT_PUBLIC_APP_HOST=${APP_HOST:-agimemes.com}
+      - STORYBOOK_INTERNAL_URL=${STORYBOOK_INTERNAL_URL:-http://storybook:3000}
+      - STORYBOOK_ADMIN_TOKEN=${STORYBOOK_ADMIN_TOKEN:-}
     volumes:
       - ./216labs.db:/app/216labs.db
       - ./:/workspace:ro
@@ -328,6 +330,10 @@ services:
       - STORYBOOK_STRIPE_WEBHOOK_SECRET=${STORYBOOK_STRIPE_WEBHOOK_SECRET:-}
       - NEXT_PUBLIC_STORYBOOK_STRIPE_PUBLISHABLE_KEY=${NEXT_PUBLIC_STORYBOOK_STRIPE_PUBLISHABLE_KEY:-}
       - STORYBOOK_BOOK_PRICE_CENTS=${STORYBOOK_BOOK_PRICE_CENTS:-2499}
+      - STORYBOOK_ADMIN_TOKEN=${STORYBOOK_ADMIN_TOKEN:-}
+      - STORYBOOK_RESEND_API_KEY=${STORYBOOK_RESEND_API_KEY:-}
+      - STORYBOOK_ADMIN_EMAIL=${STORYBOOK_ADMIN_EMAIL:-}
+      - STORYBOOK_FROM_EMAIL=${STORYBOOK_FROM_EMAIL:-}
       - DATA_DIR=/app/data
     volumes:
       - ./storybook/data:/app/data
