--- a/RamblingRadio/manifest.json
+++ b/RamblingRadio/manifest.json
@@ -2,7 +2,7 @@
   "id": "ramblingradio",
   "name": "RamblingRadio",
   "tagline": "Community radio & podcasting",
-  "description": "Express + React + Vite full-stack application with PostgreSQL backend via Drizzle ORM. Community-driven audio content platform.",
+  "description": "Express + React + Vite full-stack application with SQLite backend via Drizzle ORM. Community-driven audio content platform.",
   "category": "consumer",
   "internal_port": 5000,
   "memory_limit": "256m",
@@ -11,10 +11,10 @@
   "stack": {
     "frontend": "React 18 + Vite",
     "backend": "Express 5",
-    "database": "PostgreSQL (Drizzle ORM)",
+    "database": "SQLite (Drizzle ORM + libsql)",
     "other": null
   },
   "env_vars": [
-    { "key": "RAMBLINGRADIO_DATABASE_URL", "description": "RamblingRadio Postgres connection string", "is_secret": true }
+    { "key": "RAMBLINGRADIO_DATABASE_URL", "description": "RamblingRadio SQLite file path (file:/app/data/...)", "is_secret": false }
   ]
 }
